Add new fields from card entity

--- a/src/main/resources/templates/cardProfile_view.html
+++ b/src/main/resources/templates/cardProfile_view.html
@@ -17,6 +17,12 @@
             </span>
         </p>
         <p>Link: <a th:href="${card.link}" th:text="${card.link}"></a></p>
+        <p>Author: <span th:text="${card.authorName}"></span></p>
+        <p>Category: <span th:text="${card.category}"></span></p>
+        <p>Price: <span th:text="${card.price}"></span></p>
+        <p>Platform: <span th:text="${card.platform}"></span></p>
+        <p>Recommendations: <span th:text="${card.recommendations}"></span></p>
+        <p>Instructions: <span th:text="${card.instructions}"></span></p>
     </div>
 </div>
 </body>
