--- a/src/main/resources/templates/createCard_view.html
+++ b/src/main/resources/templates/createCard_view.html
@@ -24,13 +24,39 @@
         </div>
 
         <div class="form-group">
-            <label for="tags">Tags:</label><br>
+            <label for="tags">Tags (comma-separated):</label><br>
             <input type="text" id="tags" name="tags" class="input-field">
         </div>
 
         <div class="form-group">
             <label for="link">Link:</label><br>
             <input type="text" id="link" name="link" class="input-field">
+        </div>
+
+        <!-- New fields -->
+        <div class="form-group">
+            <label for="category">Category:</label><br>
+            <input type="text" id="category" name="category" class="input-field">
+        </div>
+
+        <div class="form-group">
+            <label for="price">Price:</label><br>
+            <input type="number" id="price" name="price" class="input-field">
+        </div>
+
+        <div class="form-group">
+            <label for="platform">Platform:</label><br>
+            <input type="text" id="platform" name="platform" class="input-field">
+        </div>
+
+        <div class="form-group">
+            <label for="recommendations">Recommendations:</label><br>
+            <textarea id="recommendations" name="recommendations" class="input-field"></textarea>
+        </div>
+
+        <div class="form-group">
+            <label for="instructions">Instructions:</label><br>
+            <textarea id="instructions" name="instructions" class="input-field"></textarea>
         </div>
 
         <div class="form-group">
