Refactor read more url

--- a/src/main/resources/templates/cards_view.html
+++ b/src/main/resources/templates/cards_view.html
@@ -28,7 +28,7 @@
             </span>
         </p>
         <p><b>Link:</b> <span class="link" th:text="${card.link}"></span></p>
-        <p><a th:href="@{'/card/' + ${card.id}}">Read more</a></p>
+        <p><a th:href="@{'/cards/' + ${card.id}}">Read more</a></p>
     </div>
 </div>
 </body>
