--- a/src/main/resources/static/css/userProfile.css
+++ b/src/main/resources/static/css/userProfile.css
@@ -1,6 +1,3 @@
-/* userProfile.css */
-
-/* Общие стили для страницы */
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -22,7 +19,6 @@ h1 {
     color: #333;
 }
 
-/* Стили для информации о пользователе */
 .user-info {
     margin-bottom: 20px;
 }
@@ -31,7 +27,6 @@ h1 {
     margin: 10px 0;
 }
 
-/* Стили для таблицы ролей */
 .roles-table {
     width: 100%;
     border-collapse: collapse;
@@ -52,7 +47,6 @@ h1 {
     border-bottom: none;
 }
 
-/* Стили для кнопок */
 .btn {
     display: inline-block;
     padding: 10px 20px;
@@ -73,4 +67,32 @@ h1 {
 
 .btn-primary:hover {
     background-color: #0056b3;
+}
+
+.liked-cards-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.liked-cards-list li {
+    margin: 10px 0;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border: 1px solid #e1e1e1;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+.liked-cards-list li a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.liked-cards-list li a:hover {
+    text-decoration: underline;
+}
+
+.liked-cards-list li:not(:first-child) {
+    margin-top: 5px;
 }
